--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -16,13 +16,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Oxanium" rel="stylesheet">
 
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
-    <link rel="stylesheet" href="{% static "react/main.css" %}">
+    <link rel="stylesheet" href="{% static "main.css" %}">
 </head>
 
 <body>
     <!-- <script src="http://127.0.0.1:8000/static/react/main.js"></script> -->
     <div id="root"></div>
-    <script src="{% static "react/main.js" %}"></script>
+    <script src="{% static "main.js" %}"></script>
 </body>
 
 </html>
