--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0E0021" />
     <meta name="description" content="II Liceum Ogólnokształcące im. Mikołaja Kopernika" />
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="{% static "main.css" %}">
 </head>
 
-<body>
+<body style="background-image: url({% static "media/background.png" %});">
     <!-- <script src="http://127.0.0.1:8000/static/react/main.js"></script> -->
     <div id="root"></div>
     <script src="{% static "main.js" %}"></script>
