--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,12 +15,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Oxanium" rel="stylesheet">
 
-    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
     <link rel="stylesheet" href="{% static "main.css" %}">
 </head>
 
 <body style="background-image: url({% static "media/background.png" %});">
-    <!-- <script src="http://127.0.0.1:8000/static/react/main.js"></script> -->
     <div id="root"></div>
     <script src="{% static "main.js" %}"></script>
 </body>
